# trellis-silicon

./: .gitignore  CONTRIBUTING.md  README.md  app.py  generate.py  pipeline_core.py  pyproject.toml  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
patches/: mps_compat.py
src/trellis_silicon/: __init__.py  _paths.py  cli.py  core.py  webui.py
src/trellis_silicon/backends/: __init__.py  mesh_extract.py  stubs.py  texture_baker.py
src/trellis_silicon/patches/: __init__.py  __main__.py  attention.py  cfg_batch.py  common.py  device.py  loading.py  mesh.py  stubs.py
tests/: test_mesh_extract.py
tools/: profile_attn.py  profile_memory.py  render_preview.py
tools/bench/: bench_n1.py  cfg_sanity.py  measure_split.py  render_compare.py  test_skipinit.py
